  /usr/local/bin/_playsms/
- sendmail() and plainoldsendmail make over. sendmail() now receives array as
  parameters, this will allow more parameters such as attachments, cc and bcc,
  SMTP connection details and others
- update icons
- update function.php to load only active plugins, including themes, lang and
  gateway. this fixes icons as well
- remove lib init1 and init2, include them in function.php
- remove lib/fn_csv.php and lib/fn_download.php, move them to lib/fn_core.php
- remove lib/fn_gateway.php and lib/fn_lang.php, move them to lib/fn_core.php
- remove route handler on plugins as this is now handled by core
- remove option "denycustomsender" from config.php and other places
- remove auto route replies to inbox, the routing for non @username replies to
  inbox has some disadvantages with current logic so I decided to comment it
- fix catchall feature on inboxgroup
- fix location to hint.png
- fix fail to finalize queue creation
- fix icons for reply, resend and forward link
- fix datetime on SMS to use $datetime_now instead of supplied by Kannel
- fix webservices for GET_CONTACT and GET_CONTACT_GROUP
- fix wrong column $p_status while checking webservices returns, uplink gateway
- fix sms_board and sms_poll, both should use $_REQUEST to get parameters
- fix #78 add $from, $footer and $nofooter param to webservices
- fix #109 sms sender ID and sms footer can be changed from Send SMS page
- fix #116 addslashes, not stripslashes, before feeding to sendsms()
- fix #118 regression bug giving back-tick quotes to keyword on dba_search()
  and dba_count()

Version 0.9.9.1 - 130902
- add new webservices type of action IX to get SMS on user's inbox
- add logger_print() at the begining and the end of webservices
- add DBHOST and DBPORT on install script
- add common place to put common js files, themes/common/jscss
- add sendsms_host option in kannel gateway module (lucastx)
- add option to load/parse .html and .md files on page_welcome
- add hints with tooltip