@@ -34,9 +34,9 @@ Core functions that you can 'hook' from tools plugins:
 - rate_refund($smslog_id)
 - sendmail($mail_from,$mail_to,$mail_subject="",$mail_body="")
 - setsmsdeliverystatus($smslog_id,$uid,$p_status)
-- interceptincomingsms($sms_datetime,$sms_sender,$message,$sms_receiver)
-- interceptsmstoinbox($sms_datetime,$sms_sender,$target_user,$message)
-- interceptsendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0)
+- recvsms_intercept($sms_datetime,$sms_sender,$message,$sms_receiver)
+- recvsms_inbox_add_intercept($sms_datetime,$sms_sender,$target_user,$message)
+- sendsms_intercept($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0)
 - webservices_output($ta,$_REQUEST)
 - call($_REQUEST)
 
@@ -51,9 +51,9 @@ Core functions that you can 'hook' from feature plugins:
 - checkavailablekeyword($keyword)
 - setsmsdeliverystatus($smslog_id,$uid,$p_status)
 - setsmsincomingaction($sms_datetime,$sms_sender,$target_keyword,$message,$sms_receiver,$raw_message)
-- interceptincomingsms($sms_datetime,$sms_sender,$message,$sms_receiver)
-- interceptsmstoinbox($sms_datetime,$sms_sender,$target_user,$message)
-- interceptsendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0)
+- recvsms_intercept($sms_datetime,$sms_sender,$message,$sms_receiver)
+- recvsms_inbox_add_intercept($sms_datetime,$sms_sender,$target_user,$message)
+- sendsms_intercept($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0)
 - webservices_output($ta,$_REQUEST)
 - call($_REQUEST)
 
