@@ -15,7 +15,7 @@ defined('_SECURE_') or die('Forbidden');
  * @return
  *   array $ret
  */
-function xlate_hook_interceptincomingsms($sms_datetime, $sms_sender, $message, $sms_receiver) {
+function xlate_hook_recvsms_intercept($sms_datetime, $sms_sender, $message, $sms_receiver) {
 	global $core_config;
 	$msg = explode(" ", $message);
 	$ret = array();
